fix the view on mobile-view

--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,13 @@ body {
   font-size: 16px;
   min-height: 100vh;
 }
-
+.container {
+  background-color: var(--white);
+  border-radius: 15px;
+  max-width: 700px;
+  margin: 50px 0px;
+  padding: 30px;
+}
 .card {
   background-color: var(--white);
   color: var(--Stone-600);
@@ -127,6 +133,11 @@ td {
     border-radius: 0px;
   }
   body {
+    margin: 0px;
+    padding: 0px;
+  }
+  .container {
+    border-radius: 0px;
     margin: 0px;
     padding: 0px;
   }
